--- a/src/index.css
+++ b/src/index.css
@@ -208,3 +208,24 @@
 	background: var(--color-gray-300);
 	border-radius: 3px;
 }
+
+@keyframes shimmer {
+	0% {
+		background-position: -400px 0;
+	}
+	100% {
+		background-position: 400px 0;
+	}
+}
+
+.shimmer {
+	animation: shimmer 1.5s infinite linear;
+	background: linear-gradient(
+		to right,
+		var(--color-gray-200) 0%,
+		var(--color-gray-300) 20%,
+		var(--color-gray-200) 40%,
+		var(--color-gray-200) 100%
+	);
+	background-size: 40rem 100%;
+}
