--- a/src/index.css
+++ b/src/index.css
@@ -250,3 +250,48 @@
 	);
 	background-size: 40rem 100%;
 }
+
+@font-face {
+	font-family: "Pretendard";
+	src:
+		url("/fonts/woff2/PretendardJP-Regular.woff2") format("woff2"),
+		url("/fonts/woff/PretendardJP-Regular.woff") format("woff");
+	font-weight: 400;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Pretendard";
+	src:
+		url("/fonts/woff2/PretendardJP-Medium.woff2") format("woff2"),
+		url("/fonts/woff/PretendardJP-Medium.woff") format("woff");
+	font-weight: 500;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Pretendard";
+	src:
+		url("/fonts/woff2/PretendardJP-SemiBold.woff2") format("woff2"),
+		url("/fonts/woff/PretendardJP-SemiBold.woff") format("woff");
+	font-weight: 600;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Pretendard";
+	src:
+		url("/fonts/woff2/PretendardJP-Bold.woff2") format("woff2"),
+		url("/fonts/woff/PretendardJP-Bold.woff") format("woff");
+	font-weight: 700;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Pretendard";
+	src:
+		url("/fonts/woff2/PretendardJP-ExtraBold.woff2") format("woff2"),
+		url("/fonts/woff/PretendardJP-ExtraBold.woff") format("woff");
+	font-weight: 800;
+	font-display: swap;
+}
