--- a/src/index.css
+++ b/src/index.css
@@ -248,40 +248,35 @@
 
 @font-face {
 	font-family: "Pretendard";
-	src:
-		url("./assets/fonts/PretendardJP-Regular.woff2") format("woff2");
+	src: url("/fonts/Pretendard-Regular.subset.woff2") format("woff2");
 	font-weight: 400;
 	font-display: swap;
 }
 
 @font-face {
 	font-family: "Pretendard";
-	src:
-		url("./assets/fonts/PretendardJP-Medium.woff2") format("woff2");
+	src: url("/fonts/Pretendard-Medium.subset.woff2") format("woff2");
 	font-weight: 500;
 	font-display: swap;
 }
 
 @font-face {
 	font-family: "Pretendard";
-	src:
-		url("./assets/fonts/PretendardJP-SemiBold.woff2") format("woff2");
+	src: url("/fonts/Pretendard-SemiBold.subset.woff2") format("woff2");
 	font-weight: 600;
 	font-display: swap;
 }
 
 @font-face {
 	font-family: "Pretendard";
-	src:
-		url("./assets/fonts/PretendardJP-Bold.woff2") format("woff2");
+	src: url("/fonts/Pretendard-Bold.subset.woff2") format("woff2");
 	font-weight: 700;
 	font-display: swap;
 }
 
 @font-face {
 	font-family: "Pretendard";
-	src:
-		url("./assets/fonts/PretendardJP-ExtraBold.woff2") format("woff2");
+	src: url("/fonts/Pretendard-ExtraBold.subset.woff2") format("woff2");
 	font-weight: 800;
 	font-display: swap;
 }
